修复项目完成进度数据

--- a/src/app/pages/company/company.page.html
+++ b/src/app/pages/company/company.page.html
@@ -44,6 +44,6 @@
     <ion-item-divider>
       <ion-label>企业项目列表如下：</ion-label>
     </ion-item-divider>
-    <ipms-project-list [projects]="origin?.maps" (projectClick)="onProjectClick($event);"></ipms-project-list>
+    <ipms-project-list [projects]="list" (projectClick)="onProjectClick($event);"></ipms-project-list>
   </section>
 </ion-content>
