项目健康评测模块百修复百分比显示异常

--- a/src/app/pages/index/monitoring-report/monitoring-report.page.html
+++ b/src/app/pages/index/monitoring-report/monitoring-report.page.html
@@ -24,7 +24,7 @@
   </ion-infinite-scroll>
 </ion-content>-->
 <ion-content>
-    <pdf-viewer [src]="pdfSrc"
+    <pdf-viewer [src]="pdfSrc2"
                 (pinchIn)="PinchIn()"
                 (pinchOut)="PinchOut()"
                 (dblclick)="Dblclick()"
