--- a/src/app/shared/progress-bars/chris-progress-bar/chris-progress-bar.component.html
+++ b/src/app/shared/progress-bars/chris-progress-bar/chris-progress-bar.component.html
@@ -1,4 +1,4 @@
-<div class="progress" [style.width.%]="progress" [style.background-color]="color" [ngStyle]="{ 'border': showNegative ? '1px solid black' : null }">
+<div class="progress" [style.width.%]="progress > 100 ? 100 : progress" [style.background-color]="color" [ngStyle]="{ 'border': showNegative ? '1px solid black' : null }">
   <div class="prominent" [style.background-color]="color" *ngIf="showValue">
     <span class="value-indicator" [style.color]="color">{{ value }}{{ unit }}</span>
   </div>
