--- a/src/app/pages/project/project-jmkhdupyce/project-jmkhdupyce.component.html
+++ b/src/app/pages/project/project-jmkhdupyce/project-jmkhdupyce.component.html
@@ -2,14 +2,14 @@
   <div class="static">
     <p [style.color]="projectLevelColors[data?.healthSocreCode]">{{ data?.healthSocreCode }}</p>
     <div>
-      <ipms-project-status-tag *ngFor="let item of data?.abnormalType">{{ item }}</ipms-project-status-tag>
+      <ipms-project-status-tag *ngFor="let item of data?.abnormalType">{{ item + '异常' }}</ipms-project-status-tag>
       <!--<ipms-project-status-tag>进度异常</ipms-project-status-tag>
       <ipms-project-status-tag>进度异常</ipms-project-status-tag>-->
     </div>
   </div>
   <section class="extra">
     <ipms-progress-wrapper *ngFor="let item of data?.projectHealthTargets" [name]="item?.targetName" [data]="item">
-    <ipms-chris-progress-bar [unit]="item?.targetValueType === 0 ? null : '%'"  [color]="'#2ed232'" [value]="item?.healthMap.data || 0" [startValue]="item?.minValue" [endValue]="item?.maxValue" [points]="item?.points"></ipms-chris-progress-bar>
+    <ipms-chris-progress-bar [unit]="item?.targetValueType === 0 ? null : '%'"  [color]="item?.healthMap.data < item?.minValue || item?.healthMap.data > item?.maxValue  ? '#dba501' : '#2ed232'" [value]="item?.healthMap.data || 0" [startValue]="item?.minValue" [endValue]="item?.maxValue" [points]="item?.points"></ipms-chris-progress-bar>
   </ipms-progress-wrapper>
     <!--<ipms-progress-wrapper name="里程碑偏差（天）">
       <ipms-chris-progress-bar [color]="'#2ed232'" [value]="56" [startValue]="0" [endValue]="200" [points]="[60, 150]"></ipms-chris-progress-bar>
