--- a/src/app/pages/project/project-jyyyigxc/project-jyyyigxc.component.html
+++ b/src/app/pages/project/project-jyyyigxc/project-jyyyigxc.component.html
@@ -1,6 +1,6 @@
 <ipms-project-info-card title="项目经营成效" icon="../../../../assets/images_app/2.png">
   <section class="static">
-    <p>产值完成<code>{{ (dataList.currentApprovedValues / dataList.amount).toFixed(2) }}</code>%</p>
+    <p>产值完成<code>{{ ((dataList.currentApprovedValues / dataList.amount) * 100).toFixed(2) }}</code>%</p>
   </section>
   <section class="extra">
     <ion-grid class="first-grid">
@@ -13,29 +13,29 @@
       <ion-row>
         <ion-col>
           <h2>累计批准产值</h2>
-          <p>{{ dataList.currentApprovedValues }}万元</p>
+          <p>{{ dataList?.currentApprovedValues }}亿元</p>
         </ion-col>
         <ion-col>
           <h2>累计实际成本</h2>
-          <p>{{ dataList.completedActualCost }}万元</p>
+          <p>{{ dataList?.completedActualCost }}亿元</p>
         </ion-col>
         <ion-col>
           <h2>累计资金流入</h2>
-          <p>{{ dataList.receivedValues }}万元</p>
+          <p>{{ dataList?.receivedValues }}亿元</p>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
           <h2>累计申请产值</h2>
-          <p>{{ dataList.currentApplyValues }}万元</p>
+          <p>{{ dataList?.currentApplyValues }}亿元</p>
         </ion-col>
         <ion-col>
           <h2>项目营业收入</h2>
-          <p>{{ dataList.operatingIncome }}万元</p>
+          <p>{{ dataList?.operatingIncome }}亿元</p>
         </ion-col>
         <ion-col>
           <h2>累计资金流出</h2>
-          <p>{{ dataList.sumExpenditureValues }}万元</p>
+          <p>{{ dataList?.sumExpenditureValues }}亿元</p>
         </ion-col>
       </ion-row>
     </ion-grid>
