--- a/src/app/shared/lists/project-list/project-list.component.html
+++ b/src/app/shared/lists/project-list/project-list.component.html
@@ -1,7 +1,7 @@
 <div class="project-row" *ngFor="let project of projects" (click)="onProjectClick(project, $event);">
   <div>
     <h2>{{ project.projectName }}</h2>
-    <p>{{ project.orgName }}/{{ project.amount }}亿元/{{ project.typeName }}/2×1000MW</p>
+    <p>{{ project.orgName }}/{{ project.amount }}亿元/{{ project.typeName }}/{{ project.scale }}</p>
     <div>
       <span *ngFor="let type of project.projectHealthyVO?.abnormalType">{{ type }}异常</span>
     </div>
